# hexic

./: CMakeLists.txt  README.md  linux_configure.sh  simple_configure.sh
IDL/: CMakeLists.txt  hexic.c  hexic.dlm.in  hexic_invert_example.pro  observations.sav  read_filt.pro
Python/: CMakeLists.txt  build_bindings.py  build_bindings.py.in  example.py  find_cffi.py  has_python_requirements.py  hexic.c  hexic_bindings.py  hexic_example.py  setup.py  spam.c
cmake/: FindPythonModules.cmake
cmake/Modules/: FindIDL.cmake
include/: CMakeLists.txt  hexic.h
src/: CMakeLists.txt  cons_param.f90  factorial.f90  forward.f90  free_init.f90  hexic.c  input_param.f90  inv_init.f90  inv_param.f90  inv_utils.f90  line_param.f90  main.f90  new_invert.f90  ran_mod.f90  read_filt.f90  read_free.f90  read_input.f90  read_line.f90  read_model.f90  read_noise.f90  read_obs.f90  read_scat.f90  read_weights.f90  run_hexic.f90  solve_svd.f90  wave_init.f90  wfa_guess.f90  write_atmos.f90  write_filters.f90  write_syn.f90  zeeman.f90
